--- a/layout/home.j2
+++ b/layout/home.j2
@@ -23,7 +23,7 @@
 
     <div class="row">
       <div class="span4 offset3" style="text-align:center">
-        <p class="home-hero">DREW</p>
+        <p class="home-hero">DREW!</p>
       </div>
     </div>
 
