--- a/layout/home.j2
+++ b/layout/home.j2
@@ -22,8 +22,8 @@
     <div class="row">&nbsp;</div>
 
     <div class="row">
-      <div class="span4 offset3" style="text-align:center">
-        <p class="home-hero">DREW!</p>
+      <div class="span4 offset2" style="text-align:center">
+        <p class="home-hero"><a href="http://twitter.com/drewr">@drewr</a></p>
       </div>
     </div>
 
