Move projects to src/.

--- a/layout/site.j2
+++ b/layout/site.j2
@@ -13,7 +13,7 @@
   <a class="brand" href="/">{{ site_title }}</a>
   <ul class="nav">
     <li><a href="/about.html">About</a></li>
-    <li><a href="/projects.html">Projects</a></li>
+    <li><a href="/src/">Projects</a></li>
   </ul>
 </div>
 </div>
