--- a/layout/home.j2
+++ b/layout/home.j2
@@ -33,7 +33,7 @@
     <div class="wrapper">
       <ul class="nav">
         <li><a href="/about.html">About</a></li>
-        <li><a href="/projects.html">Projects</a></li>
+        <li><a href="/src/">Projects</a></li>
         {# <li><a href="/b">Blog</a></li> #}
       </ul>
     </div>
